test/chainsaw/netpol_traffic_matrix/00-create-quay-registry.yaml
apiVersion: quay.redhat.com/v1
kind: QuayRegistry
metadata:
  name: netpol-matrix
spec:
  configBundleSecret: ($values.configBundle)
  components:
  - kind: quay
    managed: true
  - kind: clair
    managed: true
  - kind: postgres
    managed: true
  - kind: redis
    managed: true
  - kind: mirror
    managed: true
  - kind: clairpostgres
    managed: true
  - kind: horizontalpodautoscaler
    managed: false
  - kind: objectstorage
    managed: ($values.managedObjectStorage)
  - ($values.routeComponent)
  - kind: monitoring
    managed: ($values.managedMonitoring)
  - kind: tls
    managed: ($values.managedTLS)
